default.css: admonitions: title: fix error on mobile browsers where the separator line is too high and overlaps text - oddly, doesn't seem to exist in original markdeep

--- a/css/default.css
+++ b/css/default.css
@@ -1733,7 +1733,6 @@ p.hang {
     width: 100%;
     height: 1px;
     background-color: #969696;
-    top: 2.875em;
     left: 0;
     position: absolute;
 }
